Update vscode settings

--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -43,19 +43,32 @@
     // Features
     "search.exclude": {
         "**/.git": true,
-        "**/bower_components": false,
+        "**/bower_components": true,
         "**/node_modules": false
     },
-    "search.showLineNumbers": true,
     "search.smartCase": true,
     "search.useIgnoreFiles": false,
-    "extensions.ignoreRecommendations": true,
     "comments.openPanel": "neverOpen",
     // Application
     "update.mode": "start",
     // Extensions
+    //// Custom
     "autoimport.filesToScan": "./**/*.{ts,tsx,js,jsx}",
     "color-highlight.matchWords": true,
+    "eslint.alwaysShowStatus": true,
+    "eslint.format.enable": true,
+    "path-autocomplete.extensionOnImport": true,
+    "path-autocomplete.triggerOutsideStrings": true,
+    "prettier.configPath": ".prettierrc",
+    "prettier.endOfLine": "lf",
+    "prettier.jsxSingleQuote": true,
+    "prettier.printWidth": 120,
+    "prettier.requireConfig": true,
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 4,
+    "prettier.vueIndentScriptAndStyle": true,
+    "stylelint.reportNeedlessDisables": true,
+    //// Default
     "css.lint.argumentsInColorFunction": "warning",
     "css.lint.boxModel": "warning",
     "css.lint.compatibleVendorPrefixes": "warning",
@@ -70,8 +83,6 @@
     "css.lint.zeroUnits": "warning",
     "css.validate": false,
     "emmet.triggerExpansionOnTab": true,
-    "eslint.alwaysShowStatus": true,
-    "eslint.format.enable": true,
     "git.enableStatusBarSync": false,
     "html.format.endWithNewline": true,
     "html.format.indentHandlebars": true,
@@ -90,17 +101,7 @@
     "less.lint.unknownVendorSpecificProperties": "warning",
     "less.lint.zeroUnits": "warning",
     "less.validate": false,
-    "path-autocomplete.extensionOnImport": true,
-    "path-autocomplete.triggerOutsideStrings": true,
     "php.validate.executablePath": "/usr/bin/php",
-    "prettier.configPath": ".prettierrc",
-    "prettier.endOfLine": "lf",
-    "prettier.jsxSingleQuote": true,
-    "prettier.printWidth": 120,
-    "prettier.requireConfig": true,
-    "prettier.singleQuote": true,
-    "prettier.tabWidth": 4,
-    "prettier.vueIndentScriptAndStyle": true,
     "scss.lint.argumentsInColorFunction": "warning",
     "scss.lint.boxModel": "warning",
     "scss.lint.compatibleVendorPrefixes": "warning",
@@ -114,6 +115,5 @@
     "scss.lint.unknownVendorSpecificProperties": "warning",
     "scss.lint.zeroUnits": "warning",
     "scss.validate": false,
-    "stylelint.reportNeedlessDisables": true,
     "typescript.preferences.quoteStyle": "single",
 }
