--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ app/apache2/indexv/*
 # /app/visual-studio-code
 app/visual-studio-code/globalStorage/*
 app/visual-studio-code/workspaceStorage/*
+app/visual-studio-code/sync/*
 
 # /shell/git
 shell/git/gituser
