Update settings to disable automatic update for vscode

--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -90,5 +90,6 @@
   // ---------------
   "editor.suggestSelection": "first",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "update.mode": "manual"
 }
