--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -1,95 +1,50 @@
 {
-  // ---------------
-  // VSCODE Interface
-  // ---------------
-  "workbench.colorTheme": "Monokai",
-  "workbench.editor.highlightModifiedTabs": true,
-  "workbench.editor.tabSizing": "shrink",
-  "workbench.tree.renderIndentGuides": "always",
-  "workbench.view.alwaysShowHeaderActions": true,
-  "window.nativeTabs": true,
-  "window.restoreWindows": "one",
-  "search.showLineNumbers": true,
-  "search.smartCase": true,
-  "search.useIgnoreFiles": false,
-  "editor.find.addExtraSpaceOnTop": false,
-  "editor.minimap.showSlider": "always",
-  "editor.tabCompletion": "on",
-  // ---------------
-  // EDITOR Styling
-  // ---------------
-  "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
-  "files.watcherExclude": {
-    "**/bower_components/**": true,
-    "**/node_modules/**": true,
-    "**/vendor/**": true
-  },
-  "editor.autoClosingBrackets": "always",
-  "editor.autoClosingQuotes": "always",
-  "editor.codeActionsOnSave": {
-    "source.fixAll": true
-  },
-  "editor.fontSize": 13,
-  "editor.formatOnSave": true,
-  "editor.linkedEditing": true,
-  "editor.renderWhitespace": "boundary",
-  // ---------------
-  "AllAutocomplete.cycleOpenDocumentsOnLaunch": true,
-  "AllAutocomplete.maxItemsInSingleList": 500,
-  "AllAutocomplete.maxLines": 5000,
-  "AllAutocomplete.updateOnlyOnSave": true,
-  "autoimport.filesToScan": "./**/*.{ts,tsx,js,jsx}",
-  "autoimport.showNotifications": true,
-  "path-autocomplete.extensionOnImport": true,
-  "path-autocomplete.triggerOutsideStrings": true,
-  "todo-tree.general.tags": [
-    "BUG",
-    "HACK",
-    "FIXME",
-    "TODO",
-    "XXX",
-    "@TODO",
-    "@NOTE"
-  ],
-  // ---------------
-  // CODE Styling
-  // ---------------
-  "html.format.endWithNewline": true,
-  "html.format.indentHandlebars": true,
-  "html.format.indentInnerHtml": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "prettier.requireConfig": true,
-  // ---------------
-  "css.validate": true,
-  "less.validate": true,
-  "scss.validate": true,
-  "stylelint.enable": true,
-  // ---------------
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "javascript.format.enable": true,
-  "typescript.format.enable": true,
-  "javascript.preferences.quoteStyle": "single",
-  "typescript.preferences.quoteStyle": "single",
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "javascript.validate.enable": true,
-  "typescript.validate.enable": true,
-  "eslint.format.enable": true,
-  "eslint.validate": [
-    "html",
-    "javascript",
-    "typescript",
-    "javascriptreact",
-    "typescriptreact"
-  ],
-  // ---------------
-  // VSCODE Generate
-  // ---------------
-  "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "workbench.startupEditor": "none",
-  "update.mode": "manual"
+    // Linters
+    "eslint.format.enable": true,
+    "eslint.validate": ["html", "javascript", "typescript", "javascriptreact", "typescriptreact"],
+    "css.validate": false,
+    "less.validate": false,
+    "scss.validate": false,
+    "stylelint.enable": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+        "source.fixAll.eslint": true,
+        "source.fixAll.stylelint": true
+    },
+    "emmet.includeLanguages": {
+        "javascript": "javascriptreact"
+    },
+    // Extensions
+    "AllAutocomplete.cycleOpenDocumentsOnLaunch": true,
+    "AllAutocomplete.maxItemsInSingleList": 500,
+    "AllAutocomplete.maxLines": 5000,
+    "AllAutocomplete.updateOnlyOnSave": true,
+    "autoimport.filesToScan": "**/*.{ts,tsx,js,jsx}",
+    "autoimport.showNotifications": true,
+    "color-highlight.matchWords": true,
+    "path-autocomplete.extensionOnImport": true,
+    "path-autocomplete.triggerOutsideStrings": true,
+    "todo-tree.general.tags": ["BUG", "HACK", "FIXME", "TODO", "XXX", "@TODO", "NOTE", "@NOTE", "[ ]", "[x]"],
+    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    // IDE Editor
+    "editor.autoClosingBrackets": "always",
+    "editor.autoClosingQuotes": "always",
+    "editor.renderWhitespace": "boundary",
+    "editor.tabCompletion": "on",
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": true,
+        "strings": true
+    },
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "workbench.colorTheme": "Monokai",
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.editor.highlightModifiedTabs": true,
+    //
+    "update.mode": "start"
 }
