Update vscode setting to disable trust popup

--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -66,5 +66,6 @@
   //
   "update.mode": "start",
   "window.nativeTabs": true,
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "security.workspace.trust.banner": "never"
 }
